# portfolio

./: .gitignore  CSS_HTML_CHANGES.md  DOCUMENTATION_INDEX.md  Dockerfile  FRONTEND_IMPROVEMENTS.md  Procfile  QUICK_VISUAL_GUIDE.md  README.md  README_IMPROVEMENTS.md  fly.toml  pyproject.toml  render.yaml
portfolio_backend/: .env.example  __init__.py  django_setup.py  main.py  manage.py  migrate.py  models.py  requirements.txt
portfolio_backend/static/: index.html
